cluster/manifests/memory-bank/overlays/dev/ext-proc-proxy/envoy_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-proc
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: ext-proc-proxy
  configPatches:
    - applyTo: LISTENER
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 1073741824
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            default_source_code:
              inline_string: |
                function envoy_on_request(request_handle)
                  local host = request_handle:headers():get("Host")
                  request_handle:headers():replace("X-Original-Host", host)
                  request_handle:headers():replace("Host", "memory-bank-varnish")
                end
    - applyTo: CLUSTER
      patch:
        operation: ADD
        value:
          name: ext-proc
          connect_timeout: 1s
          type: STATIC
          lb_policy: ROUND_ROBIN
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: ext-proc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 50051
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ext_proc
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
            grpc_service:
              envoy_grpc:
                cluster_name: ext-proc
              timeout: 30s
            failure_mode_allow: true
            allow_mode_override: true
            processing_mode:
              request_header_mode: SEND
              response_header_mode: SKIP
              request_body_mode: NONE
              response_body_mode: NONE
              request_trailer_mode: SKIP
              response_trailer_mode: SKIP
