cluster/manifests/memory-bank/overlays/dev/ext-proc-proxy/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: ext-proc-proxy
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: ext-proc-proxy
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./memory-bank-varnish.memory-bank.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
